# prodigy-hf

./: README.md  demo.py  setup.cfg  setup.py
.github/workflows/: tests.yml
prodigy_hf/: __init__.py  datasets.py  ner.py  textcat.py
tests/: test_text_basics.py  test_train_basics.py
tests/datasets/: fashion-train.jsonl  fashion-valid.jsonl  new-dataset.jsonl  textcat-binary.jsonl  textcat-multi.jsonl
