[metadata]
version = 0.2.1
description = Recipes for interacting with the Hugging Face ecosystem.
url = https://github.com/explosion/prodigy-ann
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    seqeval>=1.2.2
    evaluate>=0.4.1
    transformers[torch]>=4.34.1
    datasets>=2.14.5

[options.entry_points]
prodigy_recipes =
    hf.upload = prodigy_hf:hf_upload
    hf.train.ner = prodigy_hf:hf_train_ner
    hf.train.textcat = prodigy_hf:hf_train_textcat
    hf.ner.correct = prodigy_hf:hf_ner_correct
    hf.textcat.correct = prodigy_hf:hf_textcat_correct

[bdist_wheel]
universal = true

[sdist]
formats = gztar
